<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>naoqi_driver</name>
  <version>0.5.9</version>
  <description>Driver module between Aldebaran's NAOqiOS and ROS. It publishes all sensor and actuator data as well as basic diagnostic for battery, temperature. It subscribes also to RVIZ simple goal and cmd_vel for teleop.</description>

  <author>Karsten Knese</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <license>BSD</license>

  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="0.0.4">naoqi_bridge_msgs</build_depend>
  <build_depend>naoqi_libqi</build_depend>
  <build_depend>naoqi_libqicore</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>rclcpp</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend version_gte="0.0.4">naoqi_bridge_msgs</exec_depend>
  <exec_depend>naoqi_libqi</exec_depend>
  <exec_depend>naoqi_libqicore</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosbag_storage</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>rclcpp</exec_depend>

  <conflict>nao_driver</conflict>
  <conflict>naoqi_rosbridge</conflict>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
